feat: implement Icon on the "sidebar"

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,9 +9,15 @@
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.timurbanczyk.cosaclassificationofsecurityapis.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <toolWindow
+                factoryClass="MyToolWindowFactory"
+                id="test"
+                anchor="right"
+                icon="/icons/PanelIcon.png"/>
+
         <postStartupActivity implementation="com.github.timurbanczyk.cosaclassificationofsecurityapis.startup.MyProjectActivity" />
     </extensions>
+
 
     <actions>
         <action id="com.test.luis.HelloAction" class="main" text="Hello" description="Says Hello">
